--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
             <li>About</li>
         </ul>
     </nav>
+
+
+    <div class = "container">
+        <H1> Best of NCS - No copyright sounds</H1>
+        <div class="songList"></div>
+        <div class="songBanner"></div>
+    </div>
+
+    
     <script src = "script.js"></script>
 </body>
 
